--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@types/redis": "^4.0.10",
+    "@upstash/redis": "^1.35.1",
     "autoprefixer": "^10.4.16",
     "firebase": "^11.10.0",
     "googleapis": "^130.0.0",
